--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
 						<a href="https://vk.com/elena.rielt"><img src="icons/vk.svg" width=40px></a>
 						<a href="https://wa.me/79834630176"><img src="icons/whatsapp.svg" width=40px></a>
 						<a href="https://t.me/+79834630176"><img src="icons/telegram.svg" width=40px></a>
-						<a href="https://www.instagram.com/elena.rielt.64/"><img src="icons/instagram.svg" width=40px></a>
+						<a href="https://www.instagram.com/elena.rielt.64/"><img src="icons/ig.png" width=40px></a>
 					</div>
 				</div>
 			</div>		
