--- a/index.html
+++ b/index.html
@@ -22,13 +22,13 @@
 					<h1>Елена риелтор</h1>
 					<h2>Со мной купить квартиру проще,<br>чем вы думаете!</h2>
 					<h3>+7 (983) 463-01-76</h3>
-					<b><small>Приведи друга и получи 3000р</small></b>
+					<h4>Приведи друга и получи 3000р</h4>
 					<p>Покупка/продажа квартир в<br>новостройках и на вторичном рынке</p>
 					<p>Квартиры в новостройках Саратова,<br>Москвы, Санкт-Петербурга и Краснодара</p>
 					<p>Ипотека на выгодных условиях</p>
 					<p>Страхование ипотеки</p>
 					<p>Юридическое сопровождение сделки</p>
-					<h4>подробнее</h4>
+					<h5>подробнее</h5>
 					<div class="icons">
 						<a href="https://vk.com/elena.rielt"><img src="icons/vk1.svg" width=40px></a>
 						<a href="https://wa.me/79834630176"><img src="icons/whatsapp1.svg" width=40px></a>
